fixed random integer generator in generateCrazyNeighbours